package src

import (
	pb "github.com/Cprime50/quiz/quizpb"
)

type Server struct {
	pb.UnimplementedQuizServiceServer
}


func GetQuiz() {

}

func GetLeaderBoard() {

}

func GetScore() {

}

func GetResult() {

}

func CreateQuiz() {

}

func UpdateQuiz() {

}

func DeleteQuiz() {

}

func GetAllQuizzes() {
	
}